--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.19.0",
     "concurrently": "^5.3.0",
     "express": "^4.17.1",
-    "mongoose": "^5.10.6"
+    "mongoose": "^5.10.6",
+    "multer": "^1.4.2"
   }
 }
